try fixing cutoff

--- a/styles.css
+++ b/styles.css
@@ -155,6 +155,24 @@ h1 {
 
 /* new */
 
+.dropdown-content .dropdown-content {
+    top: 0;
+    left: 100%;
+    display: none;
+    position: absolute;
+    max-width: none;
+  }
+
+  .dropdown-content .dropdown-content .dropdown-column {
+    display: block;
+    width: auto;
+    column-count: 3;
+    column-gap: 15px;
+    max-height: none;
+    max-width: none;
+    padding: 12px 16px;
+}
+/* 
 .dropdown-submenu {
     position: relative;
   }
@@ -162,7 +180,7 @@ h1 {
   .submenu-content {
     display: none;
     position: absolute;
-    left: 100%; /* position submenu to the right of button */
+    left: 100%; 
     top: 0;
     background-color: white;
     min-width: 200px;
@@ -194,4 +212,4 @@ h1 {
   }
   
 
-
+ */
